добавление эндпоинтов months types tonnages версии 2
